--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign up Form</title>
+    <link rel="stylesheet" href="./styles/styles.css">
+    <script src="./javascript.js" defer></script>
 </head>
 <body>
-    
+    <div class="container">
+        <div class="left" id="left-pannel-img">
+            <h1>Sign up form</h1>
+            <p class="credits">Photo by Halie West on Unsplash</p>
+        </div>
+        <div class="right">2</div>
+    </div>
 </body>
 </html>
