Sign up form project start, this will include form validation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 <body>
     <div class="container">
         <div class="left">
-            <h1>Sign up form</h1>
+            <div class="left-header">
+                <img class="logo" src="./img/odin-lined.png" alt="odin-logo">
+                <h1>Sign up form</h1>
+            </div>
             <p class="credits">Photo by Halie West on Unsplash</p>
         </div>
         <div class="right">
