--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
                 <fieldset>
                     <div class="item">
                         <label for="firstname">First Name</label>
-                        <input type="text" id="firstname" name="firstname" required minlength="8" maxlength="15" placeholder="John">
+                        <input type="text" id="firstname" name="firstname" required minlength="2" maxlength="15" placeholder="John">
                     </div>
                     <div class="item">
                         <label for="lastname">Last Name</label>
-                        <input type="text" id="lastname" name="lastname" minlength="8" maxlength="15" placeholder="Doe">
+                        <input type="text" id="lastname" name="lastname" minlength="2" maxlength="15" placeholder="Doe">
                    </div>
                 </fieldset>
                 <fieldset>
@@ -41,17 +41,17 @@
                     </div>
                     <div class="item">
                         <label for="phone">Phone Number</label>
-                        <input type="tel" id="phone" name="phone" required min="11" placeholder="09321586729">
+                        <input type="tel" id="phone" name="phone" required minlength="11" maxlength="11" placeholder="09321586729">
                     </div>
                 </fieldset>
                 <fieldset>
                     <div class="item">
                         <label for="password">Password</label>
-                        <input type="password" id="password" name="password" required minlength="8" maxlength="15">
+                        <input class="pwrod" type="password" id="password" name="password" required minlength="8" maxlength="15">
                     </div>
                     <div class="item">
                         <label for="confirm-password">Confirm Password</label>
-                        <input type="password" id="confirm-password" name="confirm-password" required minlength="8" maxlength="15">
+                        <input class="pwrod" type="password" id="confirm-password" name="confirm-password" required minlength="8" maxlength="15">
                     </div>
                 </fieldset>
                 <div class="sign-up">
