--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <div class="left">
             <div class="left-header">
-                <img class="logo" src="./img/odin-lined.png" alt="odin-logo">
+                <img class="logo" src="https://cdn.statically.io/gh/TheOdinProject/curriculum/5f37d43908ef92499e95a9b90fc3cc291a95014c/html_css/project-sign-up-form/odin-lined.png" alt="odin-logo">
                 <h1>Sign up form</h1>
             </div>
             <p class="credits">Photo by Halie West on Unsplash</p>
